@@ -1,6 +1,10 @@
 virtualbox (4.1.2-dfsg-2) UNRELEASED; urgency=low
 
   * Restrict dh_pycentral to the virtualbox binary package.
+  * Merge changes from the Ubuntu package but use them only when built
+    on Ubuntu:
+    - Add an Apport hook.
+    - Add vboxguest modalias to the package control field.
 
  -- Felix Geyer <debfx-pkg@fobos.de>  Tue, 20 Sep 2011 22:58:00 +0200
 
